--- a/requirements.txt
+++ b/requirements.txt
@@ -15,8 +15,14 @@ entrypoints==0.4
 exceptiongroup==1.1.0
 executing==1.2.0
 fastapi==0.89.0
+google-api-core==2.11.0
 google-auth==2.15.0
 google-auth-oauthlib==0.8.0
+google-cloud-core==2.3.2
+google-cloud-storage==2.7.0
+google-crc32c==1.5.0
+google-resumable-media==2.4.0
+googleapis-common-protos==1.58.0
 greenlet==2.0.1
 h11==0.14.0
 httpcore==0.16.3
@@ -39,6 +45,7 @@ pickleshare==0.7.5
 platformdirs==2.6.2
 pluggy==1.0.0
 prompt-toolkit==3.0.36
+protobuf==4.21.12
 psutil==5.9.4
 ptyprocess==0.7.0
 pure-eval==0.2.2
