--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,15 @@
 version: "3.9"
 services:
+  api_i4sea:
+    container_name: i4sea_services
+    build:
+      context: .
+    volumes:
+      - .:/app
+    ports:
+      - 5000:5000
+    restart: always
+  
   mongo:
     image: mongo
     restart: always
